--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -3254,7 +3254,7 @@
     "air_care_elder": "Γεροντότερος",
     "drum_illumination_desc": "Ο φωτισμός του τυμπάνου φωτίζει το εσωτερικό του τυμπάνου, κάτι που σας βοηθά κατά τη φόρτωση και το άδειασμα του μηχανήματος - είναι απλά πιο εύκολο να δείτε την υπόλοιπη κάλτσα μέσα στο τύμπανο. Διευκολύνει επίσης την επιθεώρηση κατά τον καθαρισμό ανυψωτικών και ενθέτων ανυψωτικών.",
     "turn_on_drum_illumination": "Ενεργοποίηση/απενεργοποίηση φωτισμού",
-    "wine_time": "χρόνος",
+    "wine_time": "φορά",
     "delete_account_camel_case": "Διαγραφή λογαριασμού",
     "program_mode_desc": "Η λειτουργία προγράμματος σάς επιτρέπει να προσαρμόσετε το πρόγραμμα στεγνώματος και να το προσαρμόσετε με βάση τις ανάγκες σας. Παρακάτω μπορείτε να διαβάσετε για τις διάφορες λειτουργίες και τη λειτουργικότητά τους.",
     "program_mode_available": "Διατίθενται οι παρακάτω τρόποι πλύσης:",
@@ -4632,5 +4632,11 @@
     "CL_CF_HP_discover": "Ανακαλύπτω",
     "CL_DV_HOB_cooking_assist": "Βοηθός Μαγειρικής",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "ΕΠΙΛΕΞΤΕ ΤΟ ΜΟΝΤΕΛΟ ΣΥΣΚΕΥΗΣ",
-    "CL_CF_FM_all_purchases_added_to_rf": "Όλες οι αγορές σας έχουν προστεθεί στο ψυγείο"
+    "CL_CF_FM_all_purchases_added_to_rf": "Όλες οι αγορές σας έχουν προστεθεί στο ψυγείο",
+    "CL_DV_HOB_guide_for_best_results": "Οδηγίες για καλύτερα αποτελέσματα",
+    "CL_DV_HOB_program_content_step1": "Επιλέξτε την ποσότητα.",
+    "CL_DV_HOB_program_content_step2": "Επιλέξτε τη ζώνη μαγειρέματος που θέλετε να χρησιμοποιήσετε. ",
+    "CL_DV_HOB_program_content_step3": "Επιβεβαιώστε με το κουμπί \"WIFI\" στην επιλεγμένη ζώνη στην επαγωγική εστία.",
+    "CL_DV_HOB_temperature_content_step1": "Επιλέξτε τη θερμοκρασία.",
+    "CL_CF_AS_your_device_offline": "Η συσκευή σας είναι εκτός σύνδεσης"
 }
