--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -1814,7 +1814,7 @@
     "hih_filter_model": "Salida",
     "hih_filter_plasma": "filtro de plasma",
     "wm_sell_point_video": "Vídeo de punto de venta",
-    "wm_max": "Máx.",
+    "wm_max": "Máx",
     "timing_add_less_then_4_hour": "El tiempo de calentamiento es corto, es posible que no se alcance la temperatura establecida",
     "ticket_save_success": "Ticket guardado con éxito",
     "native_language_tips": "Esta configuración no cambiará el idioma de la aplicación. Se utiliza únicamente con fines de comunicación.",
@@ -3254,7 +3254,7 @@
     "air_care_elder": "Mayor",
     "drum_illumination_desc": "La iluminación del tambor ilumina el interior del tambor, lo que le ayuda a cargar y vaciar la máquina; es simplemente más fácil ver el calcetín que queda dentro del tambor. También facilita la inspección al limpiar elevadores e inserciones de elevadores.",
     "turn_on_drum_illumination": "Encender/apagar la iluminación",
-    "wine_time": "Vez",
+    "wine_time": "vez",
     "delete_account_camel_case": "Eliminar cuenta",
     "program_mode_desc": "El modo de programa le permite personalizar su programa de secado y ajustarlo según sus necesidades. A continuación puede leer sobre los diferentes modos y su funcionalidad.",
     "program_mode_available": "Están disponibles los siguientes modos de lavado:",
@@ -4156,15 +4156,15 @@
     "CL_CF_CS_ble_scan_have_not_found": "No hemos encontrado ningún dispositivo con bluetooth. Puedes hacer clic en 'INTENTAR DE NUEVO' para volver a buscar, o configurar la red de otra manera.",
     "CL_DV_WM_pump_cleaning": "Bomba de limpieza...",
     "CL_DV_WM_autodoes_tip": "Habilite esta función y su dispositivo dispensará de manera inteligente detergente y suavizante de telas mientras lava su ropa.",
-    "CL_DV_WM_detergent_department_key": "COMPARTIMENTO DE DETERGENTE",
+    "CL_DV_WM_detergent_department_key": "Comp. Detergente",
     "CL_DV_WM_Dosage_Amount_key": "Cantidad de dosis",
-    "CL_DV_WM_softener_department_key": "Comp. Suavizante",
+    "CL_DV_WM_softener_department_key": "Comp. Suav.",
     "CL_DV_WM_auto_does_with_detergent": "Autodosis con detergente",
     "CL_DV_WM_same_detergent": "El mismo detergente",
     "CL_DV_WM_normal_dosage_weight_tip": "Dosis normal: 4~5 kg de peso de ropa.",
     "CL_DV_WM_pump_clean_note_1": "Notas: Si desea cambiar el contenido del componente de dispensación, recuerde ",
     "CL_DV_WM_pump_clean_note_2": "Primero limpie el componente.",
-    "CL_DV_WM_Pump_clean_key": "Bomba limpia",
+    "CL_DV_WM_Pump_clean_key": "Limpiar Bomba",
     "CL_DV_WM_pump_clean_how_to_use": "¿Cómo usarlo?",
     "CL_DV_WM_pump_clean_how_to_use_1": "1. Vacíe y llene el compartimento con agua antes de activar la función de limpieza de la bomba.",
     "CL_DV_WM_pump_clean_how_to_use_2": "2.Active la función de limpieza de la bomba desde el lado de la máquina.",
@@ -4632,5 +4632,11 @@
     "CL_CF_HP_discover": "Descubrir",
     "CL_DV_HOB_cooking_assist": "Asistente de cocina",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "SELECCIONE EL MODELO DEL DISPOSITIVO",
-    "CL_CF_FM_all_purchases_added_to_rf": "Todas tus compras se han añadido al frigorífico."
+    "CL_CF_FM_all_purchases_added_to_rf": "Todas tus compras se han añadido al frigorífico.",
+    "CL_DV_HOB_guide_for_best_results": "Orientación para obtener los mejores resultados",
+    "CL_DV_HOB_program_content_step1": "Seleccione la cantidad.",
+    "CL_DV_HOB_program_content_step2": "Seleccione la zona de cocción que desea utilizar. ",
+    "CL_DV_HOB_program_content_step3": "Confirme con el botón “WIFI” en la zona seleccionada de la placa de inducción.",
+    "CL_DV_HOB_temperature_content_step1": "Seleccione la temperatura.",
+    "CL_CF_AS_your_device_offline": "Su dispositivo está fuera de línea"
 }
