--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -3254,7 +3254,7 @@
     "air_care_elder": "Vanhin",
     "drum_illumination_desc": "Rumpuvalaistus valaisee rummun sisäpuolen, mikä auttaa sinua lastattaessa ja tyhjennettäessä konetta - rummun sisällä jäljellä oleva sukka on yksinkertaisesti helpompi nähdä. Se helpottaa myös tarkastusta nostimia ja nostimen sisäosia puhdistettaessa.",
     "turn_on_drum_illumination": "Kytke valaistus päälle/pois",
-    "wine_time": "Aika",
+    "wine_time": "kerran",
     "delete_account_camel_case": "Poista tili",
     "program_mode_desc": "Ohjelmatilan avulla voit mukauttaa kuivausohjelmaasi ja säätää sitä tarpeidesi mukaan. Alta voit lukea eri tiloista ja niiden toimivuudesta.",
     "program_mode_available": "Seuraavat pesutilat ovat käytettävissä:",
@@ -4156,7 +4156,7 @@
     "CL_CF_CS_ble_scan_have_not_found": "Emme ole löytäneet mitään bluetooth-laitetta. Voit etsiä uudelleen valitsemalla 'TRY AGAIN' tai määrittää verkon toisella tavalla.",
     "CL_DV_WM_pump_cleaning": "Pumpun puhdistus...",
     "CL_DV_WM_autodoes_tip": "Ota tämä ominaisuus käyttöön, niin laitteesi annostelee pesuainetta ja huuhteluainetta älykkäästi samalla, kun peset pyykkiä.",
-    "CL_DV_WM_detergent_department_key": "PESUAINELOKERO",
+    "CL_DV_WM_detergent_department_key": "Pesuainelokero",
     "CL_DV_WM_Dosage_Amount_key": "Annostusmäärä",
     "CL_DV_WM_softener_department_key": "Huuht.ain.lok",
     "CL_DV_WM_auto_does_with_detergent": "Automaattinen annostelu pesuaineella",
@@ -4164,7 +4164,7 @@
     "CL_DV_WM_normal_dosage_weight_tip": "Normaali annostus: 4-5 kg ​​vaatteiden paino.",
     "CL_DV_WM_pump_clean_note_1": "Huomautuksia: Jos haluat muuttaa annostelukomponentin sisältöä, muista se ",
     "CL_DV_WM_pump_clean_note_2": "puhdista komponentti ensin.",
-    "CL_DV_WM_Pump_clean_key": "Pumppu puhdas",
+    "CL_DV_WM_Pump_clean_key": "Pumpun puhdistus",
     "CL_DV_WM_pump_clean_how_to_use": "Kuinka käyttää?",
     "CL_DV_WM_pump_clean_how_to_use_1": "1.Tyhjennä ja täytä lokero vedellä ennen kuin otat pumpun puhdistustoiminnon käyttöön.",
     "CL_DV_WM_pump_clean_how_to_use_2": "2.Aktivoi pumpun puhdistustoiminto koneen puolelta.",
@@ -4632,5 +4632,11 @@
     "CL_CF_HP_discover": "Tutustu",
     "CL_DV_HOB_cooking_assist": "Ruoanlaittoapu",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "VALITSE LAITEMALLI",
-    "CL_CF_FM_all_purchases_added_to_rf": "Kaikki ostoksesi on lisätty jääkaappiin"
+    "CL_CF_FM_all_purchases_added_to_rf": "Kaikki ostoksesi on lisätty jääkaappiin",
+    "CL_DV_HOB_guide_for_best_results": "Ohjeita parhaiden tulosten saavuttamiseksi",
+    "CL_DV_HOB_program_content_step1": "Valitse määrä.",
+    "CL_DV_HOB_program_content_step2": "Valitse keittoalue, jota haluat käyttää. ",
+    "CL_DV_HOB_program_content_step3": "Vahvista \"WIFI\"-painikkeella valitulla alueella induktiokeittotasolla.",
+    "CL_DV_HOB_temperature_content_step1": "Valitse lämpötila.",
+    "CL_CF_AS_your_device_offline": "Laitteesi on offline-tilassa"
 }
