--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -3254,7 +3254,7 @@
     "air_care_elder": "Ақсақал",
     "drum_illumination_desc": "Барабанның жарықтандыруы барабанның ішкі жағын жарықтандырады, бұл сізге машинаны тиеу және босату кезінде көмектеседі - барабанның ішінде қалған шұлықты көру оңайырақ. Ол сондай-ақ көтергіштер мен көтергіш қосымшаларды тазалау кезінде тексеруді жеңілдетеді.",
     "turn_on_drum_illumination": "Жарықты қосу/өшіру",
-    "wine_time": "Уақыт",
+    "wine_time": "рет",
     "delete_account_camel_case": "Есептік жазбаны жою",
     "program_mode_desc": "Бағдарлама режимі кептіру бағдарламасын реттеуге және оны қажеттіліктеріңізге қарай реттеуге мүмкіндік береді. Төменде әртүрлі режимдер мен олардың функционалдығы туралы оқи аласыз.",
     "program_mode_available": "Келесі жуу режимдері қол жетімді:",
@@ -4632,5 +4632,11 @@
     "CL_CF_HP_discover": "Ашу",
     "CL_DV_HOB_cooking_assist": "Пісіруге көмекші",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "ҚҰРЫЛҒЫ МОДЕЛІН ТАҢДАҢЫЗ",
-    "CL_CF_FM_all_purchases_added_to_rf": "Барлық сатып алуларыңыз тоңазытқышқа қосылды"
+    "CL_CF_FM_all_purchases_added_to_rf": "Барлық сатып алуларыңыз тоңазытқышқа қосылды",
+    "CL_DV_HOB_guide_for_best_results": "Ең жақсы нәтижелерге арналған нұсқаулық",
+    "CL_DV_HOB_program_content_step1": "Саны таңдаңыз.",
+    "CL_DV_HOB_program_content_step2": "Пайдаланғыңыз келетін пісіру алаңын таңдаңыз. ",
+    "CL_DV_HOB_program_content_step3": "Индукциялық плитаның таңдалған аймағындағы «WIFI» түймесі арқылы растаңыз.",
+    "CL_DV_HOB_temperature_content_step1": "Температураны таңдаңыз.",
+    "CL_CF_AS_your_device_offline": "Құрылғыңыз желіден тыс"
 }
