--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -1814,7 +1814,7 @@
     "hih_filter_model": "Uttak",
     "hih_filter_plasma": "Plasma filter",
     "wm_sell_point_video": "Salgsargumentsvideo",
-    "wm_max": "Maks.",
+    "wm_max": "Maks",
     "timing_add_less_then_4_hour": "Oppvarmingstiden er kort, innstilt temperatur kan ikke nås",
     "ticket_save_success": "Billetten er lagret",
     "native_language_tips": "Denne innstillingen vil ikke endre språket til applikasjonen. Den brukes kun til kommunikasjonsformål.",
@@ -3254,7 +3254,7 @@
     "air_care_elder": "Eldre",
     "drum_illumination_desc": "Trommelbelysningen lyser opp innsiden av trommelen, noe som hjelper deg når du laster og tømmer maskinen - det er rett og slett lettere å se den gjenværende sokken inne i trommelen. Det letter også inspeksjon ved rengjøring av løftere og løfteinnsatser.",
     "turn_on_drum_illumination": "Slå belysning på/av",
-    "wine_time": "Tid",
+    "wine_time": "gang",
     "delete_account_camel_case": "Slett konto",
     "program_mode_desc": "Programmodus lar deg tilpasse tørkeprogrammet og justere det basert på dine behov. Nedenfor kan du lese om de forskjellige modusene og deres funksjonalitet.",
     "program_mode_available": "Følgende vaskemoduser er tilgjengelige:",
@@ -4156,7 +4156,7 @@
     "CL_CF_CS_ble_scan_have_not_found": "Vi har ikke funnet noen enhet på Bluetooth. Du kan klikke på \"PRØV IGJEN\" for å søke på nytt, eller konfigurere nettverket på en annen måte.",
     "CL_DV_WM_pump_cleaning": "Rengjør pumpen...",
     "CL_DV_WM_autodoes_tip": "Aktiver denne funksjonen, og enheten vil på en smart måte dispensere vaskemiddel og tøymykner mens du vasker.",
-    "CL_DV_WM_detergent_department_key": "VASKEMIDDELROM",
+    "CL_DV_WM_detergent_department_key": "Vaskemid.rom",
     "CL_DV_WM_Dosage_Amount_key": "Doseringsmengde",
     "CL_DV_WM_softener_department_key": "Skyllemid.rom",
     "CL_DV_WM_auto_does_with_detergent": "Autodoser med vaskemiddel",
@@ -4164,7 +4164,7 @@
     "CL_DV_WM_normal_dosage_weight_tip": "Normal dosering: 4~5 kg klesvekt.",
     "CL_DV_WM_pump_clean_note_1": "Merknader: Hvis du ønsker å endre innholdet i dispenseringskomponenten, må du huske å gjøre det ",
     "CL_DV_WM_pump_clean_note_2": "rengjør komponenten først.",
-    "CL_DV_WM_Pump_clean_key": "Pumpe ren",
+    "CL_DV_WM_Pump_clean_key": "Pumperens",
     "CL_DV_WM_pump_clean_how_to_use": "Hvordan bruke?",
     "CL_DV_WM_pump_clean_how_to_use_1": "1.Tøm og fyll kammeret med vann før du aktiverer pump clean-funksjonen.",
     "CL_DV_WM_pump_clean_how_to_use_2": "2. Aktiver pumpens rengjøringsfunksjon fra maskinsiden.",
@@ -4632,5 +4632,11 @@
     "CL_CF_HP_discover": "Oppdage",
     "CL_DV_HOB_cooking_assist": "Cooking Assist",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "VELG ENHETSMODELLEN",
-    "CL_CF_FM_all_purchases_added_to_rf": "Alle kjøpene dine er lagt til kjøleskapet"
+    "CL_CF_FM_all_purchases_added_to_rf": "Alle kjøpene dine er lagt til kjøleskapet",
+    "CL_DV_HOB_guide_for_best_results": "Veiledning for best resultat",
+    "CL_DV_HOB_program_content_step1": "Velg antall.",
+    "CL_DV_HOB_program_content_step2": "Velg kokesonen du vil bruke. ",
+    "CL_DV_HOB_program_content_step3": "Bekreft med \"WIFI\"-knappen på valgt sone på induksjonstoppen.",
+    "CL_DV_HOB_temperature_content_step1": "Velg temperaturen.",
+    "CL_CF_AS_your_device_offline": "Enheten din er frakoblet"
 }
