--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -3254,7 +3254,7 @@
     "air_care_elder": "Ouderling",
     "drum_illumination_desc": "De trommelverlichting verlicht de binnenkant van de trommel, wat u helpt bij het laden en legen van de machine - het is simpelweg gemakkelijker om de resterende sok in de trommel te zien. Het vergemakkelijkt ook de inspectie bij het reinigen van lifters en lifterinzetstukken.",
     "turn_on_drum_illumination": "Verlichting in-/uitschakelen",
-    "wine_time": "Tijd",
+    "wine_time": "keer",
     "delete_account_camel_case": "Account verwijderen",
     "program_mode_desc": "Met de programmamodus kunt u uw droogprogramma aanpassen aan uw behoeften. Hieronder leest u over de verschillende modi en hun functionaliteit.",
     "program_mode_available": "De volgende wasmodi zijn beschikbaar:",
@@ -4156,7 +4156,7 @@
     "CL_CF_CS_ble_scan_have_not_found": "We hebben geen enkel apparaat via Bluetooth gevonden. Klik op 'OPNIEUW PROBEREN' om opnieuw te zoeken, of klik op 'VOLGENDE' om het netwerk op een andere manier te configureren.",
     "CL_DV_WM_pump_cleaning": "Pomp schoonmaken...",
     "CL_DV_WM_autodoes_tip": "Schakel deze functie in, dan doseert uw apparaat op een slimme manier wasmiddel en wasverzachter terwijl u de was doet.",
-    "CL_DV_WM_detergent_department_key": "WASMIDDELCOMPARTIMENT",
+    "CL_DV_WM_detergent_department_key": "Wasmiddel Reservoir",
     "CL_DV_WM_Dosage_Amount_key": "Dosering Hoeveelheid",
     "CL_DV_WM_softener_department_key": "Wasverz. Reservoir",
     "CL_DV_WM_auto_does_with_detergent": "Autodoseren met wasmiddel",
@@ -4164,7 +4164,7 @@
     "CL_DV_WM_normal_dosage_weight_tip": "Normale dosering: 4~5 kg kledinggewicht.",
     "CL_DV_WM_pump_clean_note_1": "Opmerkingen: Als u de inhoud van het afgifteonderdeel wilt wijzigen, vergeet dan niet om: ",
     "CL_DV_WM_pump_clean_note_2": "Maak eerst het onderdeel schoon.",
-    "CL_DV_WM_Pump_clean_key": "Pomp schoon",
+    "CL_DV_WM_Pump_clean_key": "Pompreinig.",
     "CL_DV_WM_pump_clean_how_to_use": "Hoe te gebruiken?",
     "CL_DV_WM_pump_clean_how_to_use_1": "1. Maak het compartiment leeg en vul het met water voordat u de reinigingsfunctie van de pomp activeert.",
     "CL_DV_WM_pump_clean_how_to_use_2": "2. Activeer de pompreinigingsfunctie vanaf de machinezijde.",
@@ -4632,5 +4632,11 @@
     "CL_CF_HP_discover": "Ontdekken",
     "CL_DV_HOB_cooking_assist": "Kookhulp",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "KIES HET APPARAATMODEL",
-    "CL_CF_FM_all_purchases_added_to_rf": "Al uw aankopen zijn toegevoegd aan de koelkast"
+    "CL_CF_FM_all_purchases_added_to_rf": "Al uw aankopen zijn toegevoegd aan de koelkast",
+    "CL_DV_HOB_guide_for_best_results": "Richtlijnen voor de beste resultaten",
+    "CL_DV_HOB_program_content_step1": "Selecteer de hoeveelheid.",
+    "CL_DV_HOB_program_content_step2": "Selecteer de kookzone die u wilt gebruiken. ",
+    "CL_DV_HOB_program_content_step3": "Bevestig met de “WIFI”-knop op de geselecteerde zone op de inductiekookplaat.",
+    "CL_DV_HOB_temperature_content_step1": "Selecteer de temperatuur.",
+    "CL_CF_AS_your_device_offline": "Uw apparaat is offline"
 }
