--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -1814,7 +1814,7 @@
     "hih_filter_model": "Розетка",
     "hih_filter_plasma": "Плазмовий фільтр",
     "wm_sell_point_video": "Відео точки продажу",
-    "wm_max": "Макс.",
+    "wm_max": "Макс",
     "timing_add_less_then_4_hour": "Час нагрівання короткий, задана температура може не досягнутися",
     "ticket_save_success": "Квиток успішно збережено",
     "native_language_tips": "Це налаштування не змінить мову програми. Воно використовується лише для комунікаційних цілей.",
@@ -3254,7 +3254,7 @@
     "air_care_elder": "Старший",
     "drum_illumination_desc": "Підсвічування барабана висвітлює внутрішню частину барабана, що допомагає вам під час завантаження та спорожнення машини - просто легше побачити шкарпетку, що залишилася всередині барабана. Це також полегшує перевірку під час очищення підйомників і вставок підйомників.",
     "turn_on_drum_illumination": "Увімкніть/вимкніть освітлення",
-    "wine_time": "час",
+    "wine_time": "раз",
     "delete_account_camel_case": "Видалити обліковий запис",
     "program_mode_desc": "Програмний режим дозволяє налаштувати програму сушіння та налаштувати її відповідно до ваших потреб. Нижче ви можете прочитати про різні режими та їхні функції.",
     "program_mode_available": "Доступні такі режими прання:",
@@ -4632,5 +4632,11 @@
     "CL_CF_HP_discover": "Відкрийте для себе",
     "CL_DV_HOB_cooking_assist": "Помічник у кулінарії",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "ОБЕРІТЬ МОДЕЛЬ ПРИСТРОЮ",
-    "CL_CF_FM_all_purchases_added_to_rf": "Усі ваші покупки додано в холодильник"
+    "CL_CF_FM_all_purchases_added_to_rf": "Усі ваші покупки додано в холодильник",
+    "CL_DV_HOB_guide_for_best_results": "Рекомендації для досягнення найкращих результатів",
+    "CL_DV_HOB_program_content_step1": "Виберіть кількість.",
+    "CL_DV_HOB_program_content_step2": "Виберіть зону нагрівання, яку бажаєте використовувати. ",
+    "CL_DV_HOB_program_content_step3": "Підтвердьте, натиснувши кнопку «WIFI» на вибраній зоні на індукційній плиті.",
+    "CL_DV_HOB_temperature_content_step1": "Виберіть температуру.",
+    "CL_CF_AS_your_device_offline": "Ваш пристрій офлайн"
 }
